--- a/index.html
+++ b/index.html
@@ -4,7 +4,43 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link rel="stylesheet" href="../style.css" />
+		<link
+			rel="font"
+			href="https://fonts.google.com/specimen/Lexend+Deca:400" />
+		<link
+			rel="font"
+			href="https://fonts.google.com/specimen/Big+Shoulders+Display:700" />
+		<title>3 Column Product Card Sample</title>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<div class="product">
+				<div class="product__first-column">
+					<h1 class="product__name">sedans</h1>
+					<p class="product__ad-text">
+						Choose a sedan for its affordability and excelent
+						economy. Ideal for cruising int the city or on your next
+						road trip.
+					</p>
+				</div>
+				<div class="product__second-column">
+					<h1 class="product__name">suvs</h1>
+					<p class="product__ad-text">
+						Take a SUV for its spacious interior, power, and
+						versatality. Perfect for your next family vacation and
+						off-road adventures.
+					</p>
+				</div>
+				<div class="product__third-column">
+					<h1 class="product__name">luxury</h1>
+					<p class="product__ad-text">
+						Cruise in the best car brands without the bloated
+						prices. Enjoy the enhanced comfort of a luxury rental
+						and arrive in style.
+					</p>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
