--- a/index.html
+++ b/index.html
@@ -16,29 +16,44 @@
 	<body>
 		<main>
 			<div class="product">
-				<div class="product__first-column">
+				<div class="product__column product__column_first">
+					<img
+						class="car-icon"
+						src="../images/icon-sedans.svg"
+						alt="sedan-icon" />
 					<h1 class="product__name">sedans</h1>
 					<p class="product__ad-text">
 						Choose a sedan for its affordability and excelent
 						economy. Ideal for cruising int the city or on your next
 						road trip.
 					</p>
+					<button class="button"><span>Learn more</span></button>
 				</div>
-				<div class="product__second-column">
+				<div class="product__column product__column_second">
+					<img
+						class="car-icon"
+						src="../images/icon-suvs.svg"
+						alt="suvs-icon" />
 					<h1 class="product__name">suvs</h1>
 					<p class="product__ad-text">
 						Take a SUV for its spacious interior, power, and
 						versatality. Perfect for your next family vacation and
 						off-road adventures.
 					</p>
+					<button class="button"><span>Learn more</span></button>
 				</div>
-				<div class="product__third-column">
+				<div class="product__column product__column_third">
+					<img
+						class="car-icon"
+						src="../images/icon-luxury.svg"
+						alt="luxury-icon" />
 					<h1 class="product__name">luxury</h1>
 					<p class="product__ad-text">
 						Cruise in the best car brands without the bloated
 						prices. Enjoy the enhanced comfort of a luxury rental
 						and arrive in style.
 					</p>
+					<button class="button"><span>Learn more</span></button>
 				</div>
 			</div>
 		</main>
