--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 						alt="sedan-icon" />
 					<h1 class="product__name">sedans</h1>
 					<p class="product__ad-text">
-						Choose a sedan for its affordability and excelent
-						economy. Ideal for cruising int the city or on your next
+						Choose a sedan for its affordability and excelent fuel
+						economy. Ideal for cruising in the city or on your next
 						road trip.
 					</p>
-					<button class="button"><span>Learn more</span></button>
+					<button class="product__button product__button_first">
+						<span>Learn More</span>
+					</button>
 				</div>
 				<div class="product__column product__column_second">
 					<img
@@ -40,7 +42,9 @@
 						versatality. Perfect for your next family vacation and
 						off-road adventures.
 					</p>
-					<button class="button"><span>Learn more</span></button>
+					<button class="product__button product__button_second">
+						<span>Learn More</span>
+					</button>
 				</div>
 				<div class="product__column product__column_third">
 					<img
@@ -53,7 +57,9 @@
 						prices. Enjoy the enhanced comfort of a luxury rental
 						and arrive in style.
 					</p>
-					<button class="button"><span>Learn more</span></button>
+					<button class="product__button product__button_third">
+						<span>Learn More</span>
+					</button>
 				</div>
 			</div>
 		</main>
