fix mobile version

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../style.css" />
 		<link
-			rel="font"
-			href="https://fonts.google.com/specimen/Lexend+Deca:400" />
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Lexend+Deca:regular" />
 		<link
-			rel="font"
-			href="https://fonts.google.com/specimen/Big+Shoulders+Display:700" />
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Big+Shoulders+Display:700" />
 		<title>3 Column Product Card Sample</title>
 	</head>
 	<body>
@@ -58,7 +58,7 @@
 						and arrive in style.
 					</p>
 					<button class="product__button product__button_third">
-						<span>Learn More</span>
+						Learn More
 					</button>
 				</div>
 			</div>
