--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
 	</head>
 	<body>
 		<main>
-			<div class="product">
-				<div class="product__column product__column_first">
+			<div class="cards">
+				<div class="card card_first">
 					<img
 						class="car-icon"
 						src="../images/icon-sedans.svg"
 						alt="sedan-icon" />
-					<h1 class="product__name">sedans</h1>
-					<p class="product__ad-text">
+					<p class="card__name">sedans</p>
+					<p class="card__ad-text">
 						Choose a sedan for its affordability and excelent fuel
 						economy. Ideal for cruising in the city or on your next
 						road trip.
 					</p>
-					<button class="product__button product__button_first">
+					<button class="card__button card__button_first">
 						<span>Learn More</span>
 					</button>
 				</div>
-				<div class="product__column product__column_second">
+				<div class="card card_second">
 					<img
 						class="car-icon"
 						src="../images/icon-suvs.svg"
 						alt="suvs-icon" />
-					<h1 class="product__name">suvs</h1>
-					<p class="product__ad-text">
+					<p class="card__name">suvs</p>
+					<p class="card__ad-text">
 						Take a SUV for its spacious interior, power, and
 						versatality. Perfect for your next family vacation and
 						off-road adventures.
 					</p>
-					<button class="product__button product__button_second">
+					<button class="card__button card__button_second">
 						<span>Learn More</span>
 					</button>
 				</div>
-				<div class="product__column product__column_third">
+				<div class="card card_third">
 					<img
 						class="car-icon"
 						src="../images/icon-luxury.svg"
 						alt="luxury-icon" />
-					<h1 class="product__name">luxury</h1>
-					<p class="product__ad-text">
+					<p class="card__name">luxury</p>
+					<p class="card__ad-text">
 						Cruise in the best car brands without the bloated
 						prices. Enjoy the enhanced comfort of a luxury rental
 						and arrive in style.
 					</p>
-					<button class="product__button product__button_third">
+					<button class="card__button card__button_third">
 						Learn More
 					</button>
 				</div>
